--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>www.menardisaac.fr</title>
         <meta charset= "utf-8">
-        <link rel="stylesheet" href="banniere.css">
+        <link rel="stylesheet" href="style.css">
         <script src="https://use.fontawesome.com/9f7c7a6f4f.js"></script>
 
 		<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
