--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 je fais un dexieme paragraphe</br>Je regarde comment bien placer mon texte
                 </br>Je regarde comment bien placer mon texte une 2ème fois</br>Je regarde encore bien placer mon texte
             </p>
-            <img src="th" alt="insta"
+            <img src="th.jpg" alt="insta"
         </div>
         </header>  
        
