--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 je fais un dexieme paragraphe</br>Je regarde comment bien placer mon texte
                 </br>Je regarde comment bien placer mon texte une 2ème fois</br>Je regarde encore bien placer mon texte
             </p>
-            <a href="/supersimon/index.html/"<button type="button" class="btn btn-primary">Mon jeu</button></a>
+            <a href="https://isaacmenard.github.io/supersimon/"<button type="button" class="btn btn-primary">Mon jeu</button></a>
         </div>
         </header>  
        
