--- a/cont.html
+++ b/cont.html
@@ -19,7 +19,7 @@
 			<div class="table">
 				<ul>
 					<li class="acc">
-						<a href="index.html">Accueil</a>
+						<a href="page.html">Accueil</a>
 					</li>
 					<li class="exp">
 						<a href="exp.html">Les jeunes sapeurs pompiers</a>
