--- a/page.html
+++ b/page.html
@@ -24,7 +24,7 @@
 			<div class="table">
 				<ul>
 					<li class="acc" >						
-						<a  id="acc" href="index.html">Accueil</a>
+						<a  id="acc" href="page.html">Accueil</a>
 					</li>
 					<li class="exp">
 						<a href="exp.html">Les jeunes sapeurs pompiers</a>
