--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                
             </p>
             <p class="para">
-                <a href="https://isaacmenard.github.io/page.html"<button type="button" class="btn btn-primary btn-group-lg">Site Web</button></a>
+                <a href="https://isaacmenard.github.io/page.html"<button type="button" class="btn btn-primary btn-group-lg">Mon site Web</button></a>
             </p>
             
         </div>
