--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>www.menardisaac.fr</title>
+        <title>bienvenue sur ma page perso</title>
         <meta charset= "utf-8">
         <link rel="stylesheet" href="style.css">
         <script src="https://use.fontawesome.com/9f7c7a6f4f.js"></script>
