--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             var nombrea = Math.floor(Math.random() * 8 + 1);
             var elmt = document.getElementById("cuberouge1");
             var larg = (document.body.clientWidth) / 15;
+            var left = (3/9)+28;
             elmt.style.width = larg + "px";
              elmt.style.height = larg + "px";
              if (nombrea == 1){
@@ -42,12 +43,12 @@
             }
             if (nombrea == 2){
                 elmt.style.top = "10%";
-                elmt.style.left = "30%";
+                elmt.style.left = left + "%";
 
             }
             if (nombrea == 3){
                 elmt.style.top = "76%";
-                elmt.style.left = "30%";
+                elmt.style.left = left + "%";
 
             }
             if (nombrea == 4){
@@ -87,6 +88,7 @@
             setInterval( function(){
              var nombrea = Math.floor(Math.random() * 8 + 1);
              var larg = (document.body.clientWidth) / 15;
+             var left = (3/9)+28;
             
              var elmt = document.getElementById("cubevert1");
              elmt.style.width = larg + "px";
@@ -98,12 +100,12 @@
             }
             if (nombrea == 2){
                 elmt.style.top = "10%";
-                elmt.style.left = "30%";
+                elmt.style.left = left + "%";
 
             }
             if (nombrea == 3){
                 elmt.style.top = "76%";
-                elmt.style.left = "30%";
+                elmt.style.left = left + "%";
 
             }
             if (nombrea == 4){
@@ -142,6 +144,7 @@
             setInterval( function(){
              var nombrea = Math.floor(Math.random() * 8 + 1);
              var larg = (document.body.clientWidth) / 15;
+             var left = (3/9)+28;
              var elmt = document.getElementById("cubebleu1");
              elmt.style.width = larg + "px";
              elmt.style.height = larg + "px";
@@ -152,12 +155,12 @@
             }
             if (nombrea == 2){
                 elmt.style.top = "10%";
-                elmt.style.left = "30%";
+                elmt.style.left = left + "%";
 
             }
             if (nombrea == 3){
-                elmt.style.top = "76%";
-                elmt.style.left = "30%";
+                elmt.style.top = "76%"
+                elmt.style.left = left + "%";
 
             }
             if (nombrea == 4){
@@ -197,6 +200,7 @@
              var nombrea = Math.floor(Math.random() * 8 + 1);
              var elmt = document.getElementById("cubeorange1");
              var larg = (document.body.clientWidth) / 15;
+             var left = (3/9)+28;
              elmt.style.width = larg + "px";
              elmt.style.height = larg + "px";
              if (nombrea == 1){
@@ -206,12 +210,12 @@
             }
             if (nombrea == 2){
                 elmt.style.top = "10%";
-                elmt.style.left = "30%";
+                elmt.style.left = left + "%";
 
             }
             if (nombrea == 3){
                 elmt.style.top = "76%";
-                elmt.style.left = "30%";
+                elmt.style.left = left + "%";
 
             }
             if (nombrea == 4){
