--- a/cont.html
+++ b/cont.html
@@ -45,8 +45,12 @@
               
 		</article>
 		<footer>
-			<p>Site 01/12/2017 MENARD Isaac - ce site est privé</p>
-		</footer>
+				<p>2015-2017 - Tous droits réservés à Menard Isaac</br>
+	
+						Il est strictement interdit de copier et de distribuer le contenu de ce site sans l'accord express de son propriétaire.
+					</br>
+						En continuant votre navigation sur ce site, vous acceptez l'utilisation des cookies.(Même si il n'y en a pas)</p>
+			</footer>
 		<style>
 				#exp{
 					color: yellow
