--- a/page.html
+++ b/page.html
@@ -76,7 +76,11 @@
 			</style>
 		
 		<footer>
-			<p>Site de MENARD Isaac - ce site est privé</p>
+			<p>2015-2017 - Tous droits réservés à Menard Isaac</br>
+
+					Il est strictement interdit de copier et de distribuer le contenu de ce site sans l'accord express de son propriétaire.
+				</br>
+					En continuant votre navigation sur ce site, vous acceptez l'utilisation des cookies.(Même si il n'y en a pas)</p>
 		</footer>
 	</body>
 	</html>
