--- a/cont.html
+++ b/cont.html
@@ -28,7 +28,7 @@
 						<a href="loi.html">mes projets</a>
 					</li>
 					<li class="super">
-						<a href="super_simon/nv1.html">Mon jeu</a>
+						<a href="niv1.html">Mon jeu</a>
 					</li>
 					<li class="cont">
 						<a id="exp" href="cont.html">Contactez-moi !</a>
