mise en place fichier public

--- a/cont.html
+++ b/cont.html
@@ -2,7 +2,7 @@
     <head>
         <title>www.menardisaac.fr</title>
         <meta charset= "utf-8">
-		<link rel="stylesheet" href="lestyle.css">
+		<link rel="stylesheet" href="public/lestyle.css">
 		<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
