--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>bienvenue sur ma page perso</title>
         <meta charset= "utf-8">
         
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="public/style.css">
         <script src="https://use.fontawesome.com/9f7c7a6f4f.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
