--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>bienvenue sur ma page perso</title>
         <meta charset= "utf-8">
         
-        <link rel="stylesheet" href="public/style.css">
+        <link rel="stylesheet" href="style.css">
         <script src="https://use.fontawesome.com/9f7c7a6f4f.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
@@ -283,8 +283,8 @@
                 </br>Pense à me suivre sur <a href="https://github.com/isaacmenard">GitHub</a></br>Merci à toi pour avoir lu le premier paragraphe !
             </p>
             <p class="paragraphe">
-                Donc maintenant tu peux aller voir mon site web</br>Je place le lien de mon site <a href="https://isaacmenard.github.io/page.html">ici</a>
-                </br>Si tu lis ce texte c'est sûrement que tu n'est pas aller voir ce site alors vas-y </br>mais qu'est-ce que tu attend ? 
+                Donc maintenant tu peux aller voir mon site web</br>Je place le lien de mon site <a href="page.html">ici</a>
+                </br>Si tu lis ce texte c'est sûrement que tu n'es pas aller voir ce site alors vas-y </br>mais qu'est-ce que tu attend ? 
                   
             </p>
             <p class="paragraphe" id="age">
