--- a/page.html
+++ b/page.html
@@ -24,19 +24,19 @@
 			<div class="table">
 				<ul>
 					<li class="acc" >						
-						<a  id="acc" href="page.html">Accueil</a>
+						<a  id="acc" href="/moi">Accueil</a>
 					</li>
 					<li class="exp">
-						<a href="exp.html">Les jeunes sapeurs pompiers</a>
+						<a href="/experience">Les jeunes sapeurs pompiers</a>
 					</li>
 					<li class="loi">
-						<a href="loi.html">mes projets</a>
+						<a href="/projets">mes projets</a>
 					</li>
 					<li class="super">
-						<a href="niv1.html">Mon jeu</a>
+						<a href="/mon-jeu">Mon jeu</a>
 					</li>
 					<li class="cont">
-						<a href="cont.html">Contactez-moi !</a>
+						<a href="/contacte-moi">Contactez-moi !</a>
 					</li>
 					
 					
