--- a/page.html
+++ b/page.html
@@ -11,29 +11,22 @@
 	</head>
 	<body>
 		
-		<header>
 		
-			<h1>Isaac MENARD</h1>
-			<h2>Accueil</h2>
+		<div class="ban">
+			<h1 class="texte">Isaac <br>MENARD</h1>
+		</div>
 			
 			
-		</header>
-		<article><h2></h2></article>
+		
 		<nav>
 			
 			<div class="table">
 				<ul>
-					<li class="acc" >						
-						<a  id="acc" href="/moi">Accueil</a>
-					</li>
 					<li class="exp">
 						<a href="/experience">Les jeunes sapeurs pompiers</a>
 					</li>
 					<li class="loi">
 						<a href="/projets">mes projets</a>
-					</li>
-					<li class="super">
-						<a href="/mon-jeu">Mon jeu</a>
 					</li>
 					<li class="cont">
 						<a href="/contacte-moi">Contactez-moi !</a>
@@ -44,39 +37,34 @@
 				</ul>
 			</div>
 		</nav>
-		<article>
-			
-			<div class="bras">
-					<div class=texte>
-							<p>test</p>
-						</div>
-				<h2 class="hey">lien utiles</h2>
-				<ul class="hey">
-					<li >
-						<a class="ra" href="https://developer.mozilla.org/fr/docs/Web/CSS/Couleurs_CSS/S%C3%A9lecteur_de_couleurs"_blank>- site pour les couleurs CSS</a>
-					</li>
-					<li >
-						<a class="ra" href="http://pierre-giraud.com/javascript/cours-complet/javascript-presentation.php"_blank>- site pour apprendre le javascript</a>
-					</li>
-					<li >	
-						<a class="ra" href="http://pierre-giraud.com/html-css/cours-complet/cours-html-css-presentation.php"_blank>- site pour apprendre le HTML et le CSS</a>
-					</li>
-					<li>
-						<p></br></p>
-					</li>
-				</ul>
+		<div class="p1">
+			<div class="gauche1">
+				<p class="texte2"><br><br>Bonjour je suis isaac un jeune dévelopeur qui programme en HTML en CSS et en JS. J’ai créé ce site pour présenter ce que je fais à vous ! enfin voilà je vous laisse lire la suite du texte de mon site<div class="moi1"></div></p>
+			</div>
+			<div class="droite1">
 				
 			</div>
-		</article>
-			
-			<style>
-				#acc{
-					color: yellow
-				}
-			</style>
-		
+		</div>
+		<div class="proj">
+			<p class="texte">Mes projets</p>
+		</div>
+		<div class="proj2">
+
+		</div>
+		<div class="proj">
+			<p class="texte">Les jeunes sapeurs pompiers</p>
+		</div>
+		<div class="jsp1">
+
+		</div>
+		<div class="proj">
+			<p class="texte">Contactez-moi !</p>
+		</div>
+		<div class="contac">
+
+		</div>
 		<footer>
-			<p>2015-2017 - Tous droits réservés à Menard Isaac</br>
+			<p> - Tous droits réservés à Menard Isaac</br>
 
 					Il est strictement interdit de copier et de distribuer le contenu de ce site sans l'accord express de son propriétaire.
 				</br>
