--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>bienvenue sur ma page perso</title>
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
     <script src="https://use.fontawesome.com/9f7c7a6f4f.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
@@ -40,87 +40,87 @@
                     
                     var nombrea = Math.floor(Math.random() * 22 + 1);
                     if (nombrea == 1){
-                        document.body.style.background = 'url("1438617991-wallhaven-91048.jpg")';
+                        document.body.style.background = 'url("public/1438617991-wallhaven-91048.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 2){
-                        document.body.style.background = 'url("wil-stewart-109690.jpg")';
+                        document.body.style.background = 'url("public/wil-stewart-109690.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 3){
-                        document.body.style.background = 'url("zac-ong-394558.jpg")';
+                        document.body.style.background = 'url("public/zac-ong-394558.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 4){
-                        document.body.style.background = 'url("teddy-kelley-181683.jpg")';
+                        document.body.style.background = 'url("public/teddy-kelley-181683.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 5){
-                        document.body.style.background = 'url("shazia-mirza-222594.jpg")';
+                        document.body.style.background = 'url("public/shazia-mirza-222594.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 6){
-                        document.body.style.background = 'url("sam-goodgame-437215.jpg")';
+                        document.body.style.background = 'url("public/sam-goodgame-437215.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 7){
-                        document.body.style.background = 'url("paul-morris-212014.jpg")';
+                        document.body.style.background = 'url("public/paul-morris-212014.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 8){
-                        document.body.style.background = 'url("nathan-anderson-297460.jpg")';
+                        document.body.style.background = 'url("public/nathan-anderson-297460.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 9){
-                        document.body.style.background = 'url("nathan-anderson-291067.jpg")';
+                        document.body.style.background = 'url("public/nathan-anderson-291067.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 11){
-                        document.body.style.background = 'url("mohammad-alizade-341348.jpg")';
+                        document.body.style.background = 'url("public/mohammad-alizade-341348.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 12){
-                        document.body.style.background = 'url("matt-palmer-171734.jpg")';
+                        document.body.style.background = 'url("public/matt-palmer-171734.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 13){
-                        document.body.style.background = 'url("martin-sattler-160751.jpg")';
+                        document.body.style.background = 'url("public/martin-sattler-160751.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 14){
-                        document.body.style.background = 'url("martin-jernberg-297304.jpg")';
+                        document.body.style.background = 'url("public/martin-jernberg-297304.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 15){
-                        document.body.style.background = 'url("marc-olivier-jodoin-409708.jpg")';
+                        document.body.style.background = 'url("public/marc-olivier-jodoin-409708.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 16){
-                        document.body.style.background = 'url("lucian-moldovan-180777.jpg")';
+                        document.body.style.background = 'url("public/lucian-moldovan-180777.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 17){
-                        document.body.style.background = 'url("levi-bare-290789.jpg")';
+                        document.body.style.background = 'url("public/levi-bare-290789.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 18){
-                        document.body.style.background = 'url("joshua-earle-183442.jpg")';
+                        document.body.style.background = 'url("public/joshua-earle-183442.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 19){
-                        document.body.style.background = 'url("jamison-mcandie-112376.jpg")';
+                        document.body.style.background = 'url("public/jamison-mcandie-112376.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 20){
-                        document.body.style.background = 'url("clayton-caldwell-382402.jpg")';
+                        document.body.style.background = 'url("public/clayton-caldwell-382402.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 21){
-                        document.body.style.background = 'url("bryan-goff-360297.jpg")';
+                        document.body.style.background = 'url("public/bryan-goff-360297.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                     if (nombrea == 22){
-                        document.body.style.background = 'url("aperture-vintage-346923.jpg")';
+                        document.body.style.background = 'url("public/aperture-vintage-346923.jpg")';
                         document.body.style.backgroundSize = '100%';
                     }
                 } 
