--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>bienvenue sur ma page perso</title>
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://use.fontawesome.com/9f7c7a6f4f.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
@@ -350,9 +350,9 @@
                 <i class="fas fa-user-secret"></i>
                 <h2 class="soustitre">Jeune dévelopeur </h2>
                 <p class="paragraphe">
-                    Salut ! je m'appelle Isaac MENARD</br>et je te demande de lire le texte présent sur cette page
+                    Salut ! je m'appelle Isaac MENARD
 
-                    </br>Tu peux aller voir ma ancienne chaine YouTube
+                    </br>Tu peux aller voir mon ancienne chaîne YouTube
                     <a href="https://www.youtube.com/channel/UCOIeqg3VM2B53eiiij62L_Q?view_as=subscriber">ici</a>
                     </br>Tu peux aller voir mon compte Instagram
                     <a href="https://instagram.com/download/?r=4094734789">ici</a>
@@ -362,8 +362,8 @@
                 </p>
                 <p class="paragraphe">
                     Donc maintenant tu peux aller voir mon site web</br>Je place le lien de mon site
-                    <a href="/moi">ici</a>
-                    </br>Si tu lis ce texte c'est sûrement que tu n'es pas aller voir ce site alors vas-y </br>mais qu'est-ce
+                    <a href="page.html">ici</a>
+                    </br>Si tu lis ce texte c'est sûrement que tu n'es pas allé voir ce site alors vas-y </br>mais qu'est-ce
                     que tu attends ?
 
                 </p>
