--- a/page.html
+++ b/page.html
@@ -2,7 +2,7 @@
     <head>
         <title>www.menardisaac.fr</title>
         <meta charset= "utf-8">
-		<link rel="stylesheet" href="public/lestyle.css">
+		<link rel="stylesheet" href="lestyle.css">
 		<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
@@ -39,10 +39,10 @@
 		</nav>
 		<div class="p1">
 			<div class="gauche1">
-				<p class="texte2"><br><br>Bonjour je suis isaac un jeune dévelopeur qui programme en HTML en CSS et en JS. J’ai créé ce site pour présenter ce que je fais à vous ! enfin voilà je vous laisse lire la suite du texte de mon site<div class="moi1"></div></p>
+				<p class="texte2">Bonjour je suis isaac un jeune dévelopeur qui programme en HTML en CSS et en JS. J’ai créé ce site pour présenter ce que je fais à vous ! enfin voilà je vous laisse lire la suite du texte de mon site<div class="moi1"></div></p>
 			</div>
 			<div class="droite1">
-				
+				<div class="image"></div>
 			</div>
 		</div>
 		<div class="proj">
