--- a/nv2.html
+++ b/nv2.html
@@ -3,7 +3,7 @@
     <head>
         <title>Super Simon</title>
         <meta charset='utf-8'>
-		<link rel="stylesheet" href="niv2.css">
+		<link rel="stylesheet" href="public/niv2.css">
 		<link rel="javascript" href="page.js">
 		<link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet"> 
 		
