--- a/page.html
+++ b/page.html
@@ -6,7 +6,9 @@
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="js/jquery.anythingslider.js"></script>
 	<link rel="stylesheet" href="anythingslider.css">
+	<link rel="stylesheet" href="lestyle2.css">
 	<link rel="stylesheet" href="lestyle.css">
+	
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
