--- a/page.html
+++ b/page.html
@@ -89,6 +89,7 @@
 		<p class="soustexte">Le faucon</p>
 	</div>
 	<div class="proj3">
+		<br>
 		<section id="slideshow">
 
 			<div class="container">
@@ -96,28 +97,28 @@
 				<div class="slider">
 					<figure>
 						<img src="joanna-kosinska-340749.jpg" alt="" width="640" height="310" />
-						<figcaption>The mirror of soul</figcaption>
+						<figcaption>Photo 1</figcaption>
 
 					</figure>
 					<!--
 							-->
 					<figure>
 						<img src="rob-bates-306647-unsplash.jpg" alt="" width="640" height="310" />
-						<figcaption>Let's cross that bridge when we come to it</figcaption>
+						<figcaption>photo 2</figcaption>
 					</figure>
 					<!--
 							-->
 					<figure>
 						<img src="sacha-styles-549093.jpg" alt="" width="640" height="310" />
 						<figcaption>Sushi
-							<em>(do)</em> time</figcaption>
+							<em>(do)</em>Photo 3</figcaption>
 
 					</figure>
 					<!--
 							-->
 					<figure>
 						<img src="thought-catalog-214785-unsplash.jpg" alt="" width="640" height="310" />
-						<figcaption>Waking Life</figcaption>
+						<figcaption>Photo 4</figcaption>
 					</figure>
 					<span id="sl_play" class="sl_command"></span>
 					<span id="sl_pause" class="sl_command"></span>
