--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     <a href="https://github.com/isaacmenard">GitHub</a>
                 </p>
                 <p class="paragraphe">
-                    <a href="page.html"><button type="button" class="btn btn-danger">clic ici pour aller sur mon site web !</button></a>
+                    <a href="page.html"><button type="button" class="btn btn-danger">clique ici pour aller sur mon site web !</button></a>
                 </p>
                 <p class="paragraphe" id="age">
 
