--- a/page.html
+++ b/page.html
@@ -127,8 +127,8 @@
 	<div class="proj3">
 		<br>
 		<div class="droite5">
-			<p class="texte">le shéma des cables</p>
-			<img class="image5" src="iamge shema copie.jpg">
+			<br>
+			<img class="image5" src="IMG_9743.JPG">
 
 		</div>
 		<div class="gauche5">
