--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <div class="tete">
                 <h1 class="Titre">Isaac</br>MENARD</h1>
                 <i class="fas fa-user-secret"></i>
-                <h2 class="soustitre">Jeune dévelopeur </h2>
+                <h2 class="soustitre">Jeune développeur </h2>
                 <p class="paragraphe">
                 
                     <br>Salut !
