--- a/page.html
+++ b/page.html
@@ -161,7 +161,7 @@
 			<div id="position"></div>
 			<p id="chiffre">1</p>
 			<div class="bando2">
-				<p class="texte2">j'ai fait ce joystick en bois avec un makeymakey qui est une carte permettant d'envoyer des information vers un raspberry-pi si elle recoit un courant
+				<p class="texte2">j'ai fait ce joystick en bois avec un makeymakey qui est une carte permettant d'envoyer des informations vers un raspberry-pi si elle reçoit un courant
 					électrique </p>
             </div>
             
@@ -240,7 +240,7 @@
 			<div class="bando">
 				<p class="texte2">
 					<br>L'option jeune sapeur pompier est une activité complémentaire qui consiste à faire une formation de 3 ans dans le but
-					de devenir pompier volontaire ou professionele . Durant cette formation j'ai appris à sauver des personnes de malaise,
+					de devenir pompier volontaire ou professionel . Durant cette formation j'ai appris à sauver des personnes de malaise,
 					blessé... grâce au PSC1 que j'ai obtenu (Certificat de prévention et secourisme premier niveau). J'ai aussi appris à
 					utiliser une lance, maitriser des crocodiles ou des serpents et plein d'autres compétences géniales !
 					<br>.</p>
@@ -249,7 +249,7 @@
 		<div class="droite2">
 			<div class="bando2">
 				<p class="texte2">
-					<br>Je fais l'option jeune sapeur pompier depuis l'âge de 13 ans, et j'adore ! nous devons faire de la théorie avant les
+					<br>Je fais l'option jeune sapeur pompier depuis l'âge de 13 ans, et j'adore ! Nous devons faire de la théorie avant les
 					cours de jeunes sapeurs pompiers et après, ils nous font pratiquer . Il y a aussi des événements sportifs comme des
 					cross ou des raids .
 					<br>
