modif site  avec papa

--- a/page.html
+++ b/page.html
@@ -111,7 +111,7 @@
 			<p>Le super simon est un jeu de mémoire fait en javascript où le but est de se souvenir d'une combinaison qui devient de
 				plus en plus complexe</p>
 			<a href="niv1.html">
-				<button type="button" class="btn btn-danger">essayer !</button>
+				<button type="button" class="btn btn-danger">Essayer !</button>
 				<br>
 			</a>
 		</div>
@@ -126,7 +126,7 @@
 			<br>
             <img class="image5" src="IMG_9743.JPG">
             <p></p>
-            <a href="https://scratch.mit.edu/projects/embed/179725328/?autostart=true"><button type="button" class="btn btn-danger">essayer le jeu vidéo !</button></a>
+            <a href="https://scratch.mit.edu/projects/embed/179725328/?autostart=true"><button type="button" class="btn btn-danger">Essayer le jeu vidéo !</button></a>
 		</div>
 		<div class="gauche5">
 			<script>
@@ -161,8 +161,8 @@
 			<div id="position"></div>
 			<p id="chiffre">1</p>
 			<div class="bando2">
-				<p class="texte2">j'ai fait ce joystick en bois avec un makeymakey qui est une carte permettant d'envoyer des informations vers un raspberry-pi si elle reçoit un courant
-					électrique </p>
+				<p class="texte2">J'ai fait ce joystick en bois avec un makeymakey qui est une carte permettant d'envoyer des informations vers un raspberry-pi si elle reçoit un courant
+					électrique. J'ai programmé un jeu avec scratch pour utiliser le joystick.Vous pouvez le tester en cliquant sur le bouton bleu en bas à droite.</p>
             </div>
             
 		</div>
