--- a/page.html
+++ b/page.html
@@ -65,7 +65,8 @@
 								<a id="superd" class="dropdown-item" href="#supersimon">Super simon</a>
 								<a id="gamed" class="dropdown-item" href="#game">un jeu de société</a>
 								<div class="dropdown-divider"></div>
-								<a id="joyd" class="dropdown-item" href="#joystick">Mon joy-stick</a>
+								<a id="joyd" class="dropdown-item" href="#joystick">Mon joystick</a>
+								<a id="labyr" class="dropdown-item" href="#laby">Mon labyrinthe</a>
 							</div>
 						</div>
 					</div>
@@ -110,7 +111,7 @@
 			<h2>Super simon</h2>
 			<p>Le super simon est un jeu de mémoire fait en javascript où le but est de se souvenir d'une combinaison qui devient de
 				plus en plus complexe</p>
-			<a href="niv1.html">
+			<a href="niv1.html" target="_blank">
 				<button type="button" class="btn btn-danger">Essayer !</button>
 				<br>
 			</a>
@@ -126,7 +127,7 @@
 			<br>
             <img class="image5" src="IMG_9743.JPG">
             <p></p>
-            <a href="https://scratch.mit.edu/projects/embed/179725328/?autostart=true"><button type="button" class="btn btn-danger">Essayer le jeu vidéo !</button></a>
+            <a href="https://scratch.mit.edu/projects/embed/179725328/?autostart=true"><button type="button" class="btn btn-danger" target="_blank">Essayer le jeu vidéo !</button></a>
 		</div>
 		<div class="gauche5">
 			<script>
@@ -227,7 +228,15 @@
 		</script>
 	</div>
 	</div>
-            -->
+			-->
+	<div class="proj" id="laby">
+		<p class="texte">mon labyrinthe (un jeu en développement)</p>
+	</div>
+	<div id="proj4">
+		<p class="texte2">Je suis en train de créer un jeu de parcours de labyrinthe en mode multi-joueurs.<br> Le jeu à la fin sera en Node JS. Pour le moment j'arrive en javascript/Jquery et CSS a génèrer un parcours aléatoire. J'ai créé un algo pour ca. </p>
+		<a href="jeu laby/index.html" target="_blank"><button type="button" class="btn btn-danger"> Générer le labyrinthe !</button></a>
+		<p></p>
+	</div>
 
 
 
@@ -254,7 +263,7 @@
 					cross ou des raids .
 					<br>
 					<br>
-					<a href="https://www.interieur.gouv.fr/Le-ministere/Securite-civile/Documentation-technique/Les-sapeurs-pompiers/Le-volontariat/Devenir-jeune-sapeur-pompier">
+					<a href="https://www.interieur.gouv.fr/Le-ministere/Securite-civile/Documentation-technique/Les-sapeurs-pompiers/Le-volontariat/Devenir-jeune-sapeur-pompier" target="_blank">
 						<button type="button" class="btn btn-danger">en savoir plus ici !</button>
 						<br>.</a>
 				</p>
