--- a/page.html
+++ b/page.html
@@ -230,10 +230,10 @@
 	</div>
 			-->
 	<div class="proj" id="laby">
-		<p class="texte">mon labyrinthe (un jeu en développement)</p>
+		<p class="texte">Mon labyrinthe (un jeu en développement)</p>
 	</div>
 	<div id="proj4">
-		<p class="texte2">Je suis en train de créer un jeu de parcours de labyrinthe en mode multi-joueurs.<br> Le jeu à la fin sera en Node JS. Pour le moment j'arrive en javascript/Jquery et CSS a génèrer un parcours aléatoire. J'ai créé un algo pour ca. </p>
+		<p class="texte2">Je suis en train de créer un jeu de parcours de labyrinthe en mode multi-joueurs.<br> Le jeu à la fin sera en Node JS. <br>Pour le moment j'arrive en javascript/Jquery et CSS a génèrer un parcours aléatoire. <br>J'ai créé un algo pour ca. </p>
 		<a href="jeu laby/index.html" target="_blank"><button type="button" class="btn btn-danger"> Générer le labyrinthe !</button></a>
 		<p></p>
 	</div>
