--- a/jeu laby/index.html
+++ b/jeu laby/index.html
@@ -13,8 +13,8 @@
     <p class="monjquery"></p>
     <table>
         <form method="get" action="" name="textee" id="question">
-            <label id="question4" for="test">choisis le format de ton labyrhinte</label>
-            <input type="number" name="largeur" placeholder="largeur" id="question1" />
+            <label id="question4" for="test">choisis le format de ton labyrinthe</label>
+            <input type="number" name="largeur" placeholder="Ex : 8" id="question1" />
 
             </br>
             </br>
