--- a/forum/index.html
+++ b/forum/index.html
@@ -164,8 +164,12 @@
 										</center>
 									</nav>
 								</header>
-							</div>
-
+							</div><br>
+							<nav>
+								<div class="intro">
+									<p>test<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+								</div>
+							</nav>
 
 
 
